chore: add and setup linter with prettier

--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "typing": "tsc --noEmit",
+    "checkup": "prettier --check src/",
+    "format": "prettier --write src/",
+    "linter": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
+    "linter:fix": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.1"
   }
 }
